adding basic tests for rep and service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,10 @@ spring:
     password: password
     driverClassName: org.h2.Driver
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    spring.jpa:
+      database-platform: org.hibernate.dialect.H2Dialect
+      hibernate.ddl-auto: create-drop
+      defer-datasource-initialization: true
   h2:
     console:
       enabled: true
